--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #B6CBCC;
-@define-color background #171A1D;
-@define-color foreground #F9EDDD;
-@define-color color0  #3E4144;
-@define-color color1  #F56F5B;
-@define-color color2  #74A9BB;
-@define-color color3  #D890E6;
-@define-color color4  #FCB27D;
-@define-color color5  #FFB480;
-@define-color color6  #EDCB9E;
-@define-color color7  #EDDDC6;
-@define-color color8  #A69A8B;
-@define-color color9  #F56F5B;
-@define-color color10 #74A9BB;
-@define-color color11 #D890E6;
-@define-color color12 #FCB27D;
-@define-color color13 #FFB480;
-@define-color color14 #EDCB9E;
-@define-color color15 #EDDDC6;
+@define-color cursor #B2CECB;
+@define-color background #1B1C1F;
+@define-color foreground #FEF8E6;
+@define-color color0  #414246;
+@define-color color1  #785B5E;
+@define-color color2  #65A3AF;
+@define-color color3  #B192A4;
+@define-color color4  #DE8996;
+@define-color color5  #C9BEC5;
+@define-color color6  #FDECB7;
+@define-color color7  #F6EDD2;
+@define-color color8  #ACA693;
+@define-color color9  #785B5E;
+@define-color color10 #65A3AF;
+@define-color color11 #B192A4;
+@define-color color12 #DE8996;
+@define-color color13 #C9BEC5;
+@define-color color14 #FDECB7;
+@define-color color15 #F6EDD2;
