--- a/.config/wallust/templates/wofi.css
+++ b/.config/wallust/templates/wofi.css
@@ -1,35 +1,24 @@
-/* CSS variables for wallust
- * You can use this template by adding the following to wallust.toml:
-css = { src = "colors.css", dst = "~/.config/" }
- */
+/* GTK-compatible colors for wofi from wallust */
 
-:root {
-    --wallpaper: url("{{wallpaper}}");
-/*
- * This file uses the GTK3 color definition syntax.
- * It is not compatible with standard web CSS variables.
- */
-
-/* Special colors */
-@define-color background: {{background}};
-@define-color foreground: {{foreground}};
-@define-color cursor: {{cursor}};
+@define-color background #0E1113;
+@define-color foreground #C7E1EF;
+@define-color cursor     #638DA9;
 
 /* Base colors */
-@define-color color0:  {{color0}};
-@define-color color1:  {{color1}};
-@define-color color2:  {{color2}};
-@define-color color3:  {{color3}};
-@define-color color4:  {{color4}};
-@define-color color5:  {{color5}};
-@define-color color6:  {{color6}};
-@define-color color7:  {{color7}};
-@define-color color8:  {{color8}};
-@define-color color9:  {{color9}};
-@define-color color10: {{color10}};
-@define-color color11: {{color11}};
-@define-color color12: {{color12}};
-@define-color color13: {{color13}};
-@define-color color14: {{color14}};
-@define-color color15: {{color15}};
-}
+@define-color color0     #36393C;
+@define-color color1     #012546;
+@define-color color2     #003864;
+@define-color color3     #013C68;
+@define-color color4     #377498;
+@define-color color5     #56A6CF;
+@define-color color6     #5EAAD1;
+@define-color color7     #A6CCE0;
+@define-color color8     #748F9D;
+@define-color color9     #012546;
+@define-color color10    #003864;
+@define-color color11    #013C68;
+@define-color color12    #377498;
+@define-color color13    #56A6CF;
+@define-color color14    #5EAAD1;
+@define-color color15    #A6CCE0;
+
