fix kitty and waybar colors

--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #B2CECB;
-@define-color background #1B1C1F;
-@define-color foreground #FEF8E6;
-@define-color color0  #414246;
-@define-color color1  #785B5E;
-@define-color color2  #65A3AF;
-@define-color color3  #B192A4;
-@define-color color4  #DE8996;
-@define-color color5  #C9BEC5;
-@define-color color6  #FDECB7;
-@define-color color7  #F6EDD2;
-@define-color color8  #ACA693;
-@define-color color9  #785B5E;
-@define-color color10 #65A3AF;
-@define-color color11 #B192A4;
-@define-color color12 #DE8996;
-@define-color color13 #C9BEC5;
-@define-color color14 #FDECB7;
-@define-color color15 #F6EDD2;
+@define-color cursor #B6B7B5;
+@define-color background #06050B;
+@define-color foreground #F6E9DE;
+@define-color color0  #1F1E22;
+@define-color color1  #6A667A;
+@define-color color2  #76858D;
+@define-color color3  #B7AEAB;
+@define-color color4  #B3B0B1;
+@define-color color5  #D3BCBB;
+@define-color color6  #E7C1A1;
+@define-color color7  #EAD8C7;
+@define-color color8  #A4978C;
+@define-color color9  #6A667A;
+@define-color color10 #76858D;
+@define-color color11 #B7AEAB;
+@define-color color12 #B3B0B1;
+@define-color color13 #D3BCBB;
+@define-color color14 #E7C1A1;
+@define-color color15 #EAD8C7;
