--- a/.config/colors/colors.css
+++ b/.config/colors/colors.css
@@ -4,28 +4,28 @@ css = { src = "colors.css", dst = "~/.config/" }
  */
 
 :root {
-    --wallpaper: url("/home/kyrasarii/Wallpapers/156.png");
+    --wallpaper: url("/home/kyrasarii/Wallpapers/3.png");
 
     /* Special */
-    --background: #131010;
-    --foreground: #E8EADB;
-    --cursor: #CA9E7E;
+    --background: #111215;
+    --foreground: #D9E5D2;
+    --cursor: #93B0BD;
 
     /* Colors */
-    --color0:  #3B3938;
-    --color1:  #915029;
-    --color2:  #AB5321;
-    --color3:  #D0661C;
-    --color4:  #B1C19F;
-    --color5:  #F0B34F;
-    --color6:  #BDC399;
-    --color7:  #D6D8C4;
-    --color8:  #969889;
-    --color9:  #915029;
-    --color10: #AB5321;
-    --color11: #D0661C;
-    --color12: #B1C19F;
-    --color13: #F0B34F;
-    --color14: #BDC399;
-    --color15: #D6D8C4;
+    --color0:  #393A3D;
+    --color1:  #4F786A;
+    --color2:  #4D7BA8;
+    --color3:  #947776;
+    --color4:  #6B8D64;
+    --color5:  #90AE7C;
+    --color6:  #92B47F;
+    --color7:  #C0D1B7;
+    --color8:  #869280;
+    --color9:  #4F786A;
+    --color10: #4D7BA8;
+    --color11: #947776;
+    --color12: #6B8D64;
+    --color13: #90AE7C;
+    --color14: #92B47F;
+    --color15: #C0D1B7;
 }
