--- a/.config/wlogout/colors.css
+++ b/.config/wlogout/colors.css
@@ -5,22 +5,22 @@
  * @import url("colors.css");
  */
 
-@define-color cursor #CA9E7E;
-@define-color background #131010;
-@define-color foreground #E8EADB;
-@define-color color0  #3B3938;
-@define-color color1  #915029;
-@define-color color2  #AB5321;
-@define-color color3  #D0661C;
-@define-color color4  #B1C19F;
-@define-color color5  #F0B34F;
-@define-color color6  #BDC399;
-@define-color color7  #D6D8C4;
-@define-color color8  #969889;
-@define-color color9  #915029;
-@define-color color10 #AB5321;
-@define-color color11 #D0661C;
-@define-color color12 #B1C19F;
-@define-color color13 #F0B34F;
-@define-color color14 #BDC399;
-@define-color color15 #D6D8C4;
+@define-color cursor #93B0BD;
+@define-color background #111215;
+@define-color foreground #D9E5D2;
+@define-color color0  #393A3D;
+@define-color color1  #4F786A;
+@define-color color2  #4D7BA8;
+@define-color color3  #947776;
+@define-color color4  #6B8D64;
+@define-color color5  #90AE7C;
+@define-color color6  #92B47F;
+@define-color color7  #C0D1B7;
+@define-color color8  #869280;
+@define-color color9  #4F786A;
+@define-color color10 #4D7BA8;
+@define-color color11 #947776;
+@define-color color12 #6B8D64;
+@define-color color13 #90AE7C;
+@define-color color14 #92B47F;
+@define-color color15 #C0D1B7;
