change default browser to firefox update packages

--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #B5BAA5;
-@define-color background #110F19;
-@define-color foreground #D8F9FA;
-@define-color color0  #393842;
-@define-color color1  #328199;
-@define-color color2  #937A50;
-@define-color color3  #8784AB;
-@define-color color4  #6AA6B6;
-@define-color color5  #8EE4ED;
-@define-color color6  #8FEFF1;
-@define-color color7  #BEEFF0;
-@define-color color8  #85A7A8;
-@define-color color9  #328199;
-@define-color color10 #937A50;
-@define-color color11 #8784AB;
-@define-color color12 #6AA6B6;
-@define-color color13 #8EE4ED;
-@define-color color14 #8FEFF1;
-@define-color color15 #BEEFF0;
+@define-color cursor #D49AA6;
+@define-color background #08000B;
+@define-color foreground #F4DDD7;
+@define-color color0  #0F0411;
+@define-color color1  #925E77;
+@define-color color2  #B35674;
+@define-color color3  #B57183;
+@define-color color4  #B57083;
+@define-color color5  #C37C83;
+@define-color color6  #E09F8D;
+@define-color color7  #E7C7BD;
+@define-color color8  #A28B84;
+@define-color color9  #925E77;
+@define-color color10 #B35674;
+@define-color color11 #B57183;
+@define-color color12 #B57083;
+@define-color color13 #C37C83;
+@define-color color14 #E09F8D;
+@define-color color15 #E7C7BD;
