--- a/.config/colors/colors.css
+++ b/.config/colors/colors.css
@@ -4,28 +4,28 @@ css = { src = "colors.css", dst = "~/.config/" }
  */
 
 :root {
-    --wallpaper: url("/home/kyrasarii/Wallpapers/85.jpg");
+    --wallpaper: url("/home/kyrasarii/Wallpapers/219.jpg");
 
     /* Special */
-    --background: #110F19;
-    --foreground: #D8F9FA;
-    --cursor: #B5BAA5;
+    --background: #08000B;
+    --foreground: #F4DDD7;
+    --cursor: #D49AA6;
 
     /* Colors */
-    --color0:  #393842;
-    --color1:  #328199;
-    --color2:  #937A50;
-    --color3:  #8784AB;
-    --color4:  #6AA6B6;
-    --color5:  #8EE4ED;
-    --color6:  #8FEFF1;
-    --color7:  #BEEFF0;
-    --color8:  #85A7A8;
-    --color9:  #328199;
-    --color10: #937A50;
-    --color11: #8784AB;
-    --color12: #6AA6B6;
-    --color13: #8EE4ED;
-    --color14: #8FEFF1;
-    --color15: #BEEFF0;
+    --color0:  #0F0411;
+    --color1:  #925E77;
+    --color2:  #B35674;
+    --color3:  #B57183;
+    --color4:  #B57083;
+    --color5:  #C37C83;
+    --color6:  #E09F8D;
+    --color7:  #E7C7BD;
+    --color8:  #A28B84;
+    --color9:  #925E77;
+    --color10: #B35674;
+    --color11: #B57183;
+    --color12: #B57083;
+    --color13: #C37C83;
+    --color14: #E09F8D;
+    --color15: #E7C7BD;
 }
