--- a/.config/wlogout/colors.css
+++ b/.config/wlogout/colors.css
@@ -5,22 +5,22 @@
  * @import url("colors.css");
  */
 
-@define-color cursor #D49AA6;
-@define-color background #08000B;
-@define-color foreground #F4DDD7;
-@define-color color0  #0F0411;
-@define-color color1  #925E77;
-@define-color color2  #B35674;
-@define-color color3  #B57183;
-@define-color color4  #B57083;
-@define-color color5  #C37C83;
-@define-color color6  #E09F8D;
-@define-color color7  #E7C7BD;
-@define-color color8  #A28B84;
-@define-color color9  #925E77;
-@define-color color10 #B35674;
-@define-color color11 #B57183;
-@define-color color12 #B57083;
-@define-color color13 #C37C83;
-@define-color color14 #E09F8D;
-@define-color color15 #E7C7BD;
+@define-color cursor #98C7BE;
+@define-color background #130F16;
+@define-color foreground #FFF5AD;
+@define-color color0  #3B383E;
+@define-color color1  #C35F18;
+@define-color color2  #329ACF;
+@define-color color3  #33A1D3;
+@define-color color4  #35A9DB;
+@define-color color5  #FED608;
+@define-color color6  #FEE213;
+@define-color color7  #F6E881;
+@define-color color8  #ACA25A;
+@define-color color9  #C35F18;
+@define-color color10 #329ACF;
+@define-color color11 #33A1D3;
+@define-color color12 #35A9DB;
+@define-color color13 #FED608;
+@define-color color14 #FEE213;
+@define-color color15 #F6E881;
