change fish aliases

--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #98C7BE;
-@define-color background #130F16;
-@define-color foreground #FFF5AD;
-@define-color color0  #3B383E;
-@define-color color1  #C35F18;
-@define-color color2  #329ACF;
-@define-color color3  #33A1D3;
-@define-color color4  #35A9DB;
-@define-color color5  #FED608;
-@define-color color6  #FEE213;
-@define-color color7  #F6E881;
-@define-color color8  #ACA25A;
-@define-color color9  #C35F18;
-@define-color color10 #329ACF;
-@define-color color11 #33A1D3;
-@define-color color12 #35A9DB;
-@define-color color13 #FED608;
-@define-color color14 #FEE213;
-@define-color color15 #F6E881;
+@define-color cursor #E8AD9B;
+@define-color background #080016;
+@define-color foreground #F6E5C4;
+@define-color color0  #0B0017;
+@define-color color1  #E46666;
+@define-color color2  #DB7572;
+@define-color color3  #87A8D0;
+@define-color color4  #90BBB2;
+@define-color color5  #C2B37B;
+@define-color color6  #E5B455;
+@define-color color7  #E9D1A2;
+@define-color color8  #A39271;
+@define-color color9  #E46666;
+@define-color color10 #DB7572;
+@define-color color11 #87A8D0;
+@define-color color12 #90BBB2;
+@define-color color13 #C2B37B;
+@define-color color14 #E5B455;
+@define-color color15 #E9D1A2;
