--- a/.config/hypr/colors.css
+++ b/.config/hypr/colors.css
@@ -4,28 +4,28 @@ css = { src = "colors.css", dst = "~/.config/" }
  */
 
 :root {
-    --wallpaper: url("/home/kyrasarii/Wallpapers/66.png");
+    --wallpaper: url("/home/kyrasarii/Wallpapers/10.png");
 
     /* Special */
-    --background: #130F16;
-    --foreground: #FFF5AD;
-    --cursor: #98C7BE;
+    --background: #080016;
+    --foreground: #F6E5C4;
+    --cursor: #E8AD9B;
 
     /* Colors */
-    --color0:  #3B383E;
-    --color1:  #C35F18;
-    --color2:  #329ACF;
-    --color3:  #33A1D3;
-    --color4:  #35A9DB;
-    --color5:  #FED608;
-    --color6:  #FEE213;
-    --color7:  #F6E881;
-    --color8:  #ACA25A;
-    --color9:  #C35F18;
-    --color10: #329ACF;
-    --color11: #33A1D3;
-    --color12: #35A9DB;
-    --color13: #FED608;
-    --color14: #FEE213;
-    --color15: #F6E881;
+    --color0:  #0B0017;
+    --color1:  #E46666;
+    --color2:  #DB7572;
+    --color3:  #87A8D0;
+    --color4:  #90BBB2;
+    --color5:  #C2B37B;
+    --color6:  #E5B455;
+    --color7:  #E9D1A2;
+    --color8:  #A39271;
+    --color9:  #E46666;
+    --color10: #DB7572;
+    --color11: #87A8D0;
+    --color12: #90BBB2;
+    --color13: #C2B37B;
+    --color14: #E5B455;
+    --color15: #E9D1A2;
 }
