--- a/.config/hypr/colors.css
+++ b/.config/hypr/colors.css
@@ -4,28 +4,28 @@ css = { src = "colors.css", dst = "~/.config/" }
  */
 
 :root {
-    --wallpaper: url("/home/kyrasarii/Wallpapers/10.png");
+    --wallpaper: url("/home/kyrasarii/Wallpapers/61.jpg");
 
     /* Special */
-    --background: #080016;
-    --foreground: #F6E5C4;
-    --cursor: #E8AD9B;
+    --background: #2B2535;
+    --foreground: #F3FCEC;
+    --cursor: #E4E2E5;
 
     /* Colors */
-    --color0:  #0B0017;
-    --color1:  #E46666;
-    --color2:  #DB7572;
-    --color3:  #87A8D0;
-    --color4:  #90BBB2;
-    --color5:  #C2B37B;
-    --color6:  #E5B455;
-    --color7:  #E9D1A2;
-    --color8:  #A39271;
-    --color9:  #E46666;
-    --color10: #DB7572;
-    --color11: #87A8D0;
-    --color12: #90BBB2;
-    --color13: #C2B37B;
-    --color14: #E5B455;
-    --color15: #E9D1A2;
+    --color0:  #514A5C;
+    --color1:  #B7A6C4;
+    --color2:  #D4C8DF;
+    --color3:  #34E2F3;
+    --color4:  #E4D3E7;
+    --color5:  #E9EAD7;
+    --color6:  #DDF7C8;
+    --color7:  #E6F3DB;
+    --color8:  #A1AA99;
+    --color9:  #B7A6C4;
+    --color10: #D4C8DF;
+    --color11: #34E2F3;
+    --color12: #E4D3E7;
+    --color13: #E9EAD7;
+    --color14: #DDF7C8;
+    --color15: #E6F3DB;
 }
