--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #E8AD9B;
-@define-color background #080016;
-@define-color foreground #F6E5C4;
-@define-color color0  #0B0017;
-@define-color color1  #E46666;
-@define-color color2  #DB7572;
-@define-color color3  #87A8D0;
-@define-color color4  #90BBB2;
-@define-color color5  #C2B37B;
-@define-color color6  #E5B455;
-@define-color color7  #E9D1A2;
-@define-color color8  #A39271;
-@define-color color9  #E46666;
-@define-color color10 #DB7572;
-@define-color color11 #87A8D0;
-@define-color color12 #90BBB2;
-@define-color color13 #C2B37B;
-@define-color color14 #E5B455;
-@define-color color15 #E9D1A2;
+@define-color cursor #E4E2E5;
+@define-color background #2B2535;
+@define-color foreground #F3FCEC;
+@define-color color0  #514A5C;
+@define-color color1  #B7A6C4;
+@define-color color2  #D4C8DF;
+@define-color color3  #34E2F3;
+@define-color color4  #E4D3E7;
+@define-color color5  #E9EAD7;
+@define-color color6  #DDF7C8;
+@define-color color7  #E6F3DB;
+@define-color color8  #A1AA99;
+@define-color color9  #B7A6C4;
+@define-color color10 #D4C8DF;
+@define-color color11 #34E2F3;
+@define-color color12 #E4D3E7;
+@define-color color13 #E9EAD7;
+@define-color color14 #DDF7C8;
+@define-color color15 #E6F3DB;
