disable caps lock remove zen browser windowrule

--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #E4E2E5;
-@define-color background #2B2535;
-@define-color foreground #F3FCEC;
-@define-color color0  #514A5C;
-@define-color color1  #B7A6C4;
-@define-color color2  #D4C8DF;
-@define-color color3  #34E2F3;
-@define-color color4  #E4D3E7;
-@define-color color5  #E9EAD7;
-@define-color color6  #DDF7C8;
-@define-color color7  #E6F3DB;
-@define-color color8  #A1AA99;
-@define-color color9  #B7A6C4;
-@define-color color10 #D4C8DF;
-@define-color color11 #34E2F3;
-@define-color color12 #E4D3E7;
-@define-color color13 #E9EAD7;
-@define-color color14 #DDF7C8;
-@define-color color15 #E6F3DB;
+@define-color cursor #9F97BA;
+@define-color background #302E38;
+@define-color foreground #E7E2F1;
+@define-color color0  #55535D;
+@define-color color1  #343163;
+@define-color color2  #574C84;
+@define-color color3  #565889;
+@define-color color4  #836CA4;
+@define-color color5  #B58CCB;
+@define-color color6  #BAADD6;
+@define-color color7  #D4CEE2;
+@define-color color8  #94909E;
+@define-color color9  #343163;
+@define-color color10 #574C84;
+@define-color color11 #565889;
+@define-color color12 #836CA4;
+@define-color color13 #B58CCB;
+@define-color color14 #BAADD6;
+@define-color color15 #D4CEE2;
