--- a/.config/wlogout/colors.css
+++ b/.config/wlogout/colors.css
@@ -5,22 +5,22 @@
  * @import url("colors.css");
  */
 
-@define-color cursor #9F97BA;
-@define-color background #302E38;
-@define-color foreground #E7E2F1;
-@define-color color0  #55535D;
-@define-color color1  #343163;
-@define-color color2  #574C84;
-@define-color color3  #565889;
-@define-color color4  #836CA4;
-@define-color color5  #B58CCB;
-@define-color color6  #BAADD6;
-@define-color color7  #D4CEE2;
-@define-color color8  #94909E;
-@define-color color9  #343163;
-@define-color color10 #574C84;
-@define-color color11 #565889;
-@define-color color12 #836CA4;
-@define-color color13 #B58CCB;
-@define-color color14 #BAADD6;
-@define-color color15 #D4CEE2;
+@define-color cursor #898FA2;
+@define-color background #24262B;
+@define-color foreground #F6EFF4;
+@define-color color0  #4A4B51;
+@define-color color1  #1B2E4F;
+@define-color color2  #1B2F50;
+@define-color color3  #1D3051;
+@define-color color4  #7882BB;
+@define-color color5  #868ABA;
+@define-color color6  #E5D2E1;
+@define-color color7  #E9E0E7;
+@define-color color8  #A39DA2;
+@define-color color9  #1B2E4F;
+@define-color color10 #1B2F50;
+@define-color color11 #1D3051;
+@define-color color12 #7882BB;
+@define-color color13 #868ABA;
+@define-color color14 #E5D2E1;
+@define-color color15 #E9E0E7;
