--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #898FA2;
-@define-color background #24262B;
-@define-color foreground #F6EFF4;
-@define-color color0  #4A4B51;
-@define-color color1  #1B2E4F;
-@define-color color2  #1B2F50;
-@define-color color3  #1D3051;
-@define-color color4  #7882BB;
-@define-color color5  #868ABA;
-@define-color color6  #E5D2E1;
-@define-color color7  #E9E0E7;
-@define-color color8  #A39DA2;
-@define-color color9  #1B2E4F;
-@define-color color10 #1B2F50;
-@define-color color11 #1D3051;
-@define-color color12 #7882BB;
-@define-color color13 #868ABA;
-@define-color color14 #E5D2E1;
-@define-color color15 #E9E0E7;
+@define-color cursor #9DC3CF;
+@define-color background #14111B;
+@define-color foreground #E0FEF6;
+@define-color color0  #3B3944;
+@define-color color1  #499167;
+@define-color color2  #5A88A9;
+@define-color color3  #6C8DB2;
+@define-color color4  #6A94B0;
+@define-color color5  #9DF1CE;
+@define-color color6  #A6FDE4;
+@define-color color7  #CAF6E9;
+@define-color color8  #8DACA3;
+@define-color color9  #499167;
+@define-color color10 #5A88A9;
+@define-color color11 #6C8DB2;
+@define-color color12 #6A94B0;
+@define-color color13 #9DF1CE;
+@define-color color14 #A6FDE4;
+@define-color color15 #CAF6E9;
