--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -8,22 +8,22 @@ waybar = { src = "waybar-colors.css", dst = "~/.config/waybar/colors.css" }
 @import url("colors.css");
  */
 
-@define-color cursor #9DC3CF;
-@define-color background #14111B;
-@define-color foreground #E0FEF6;
-@define-color color0  #3B3944;
-@define-color color1  #499167;
-@define-color color2  #5A88A9;
-@define-color color3  #6C8DB2;
-@define-color color4  #6A94B0;
-@define-color color5  #9DF1CE;
-@define-color color6  #A6FDE4;
-@define-color color7  #CAF6E9;
-@define-color color8  #8DACA3;
-@define-color color9  #499167;
-@define-color color10 #5A88A9;
-@define-color color11 #6C8DB2;
-@define-color color12 #6A94B0;
-@define-color color13 #9DF1CE;
-@define-color color14 #A6FDE4;
-@define-color color15 #CAF6E9;
+@define-color cursor #BC9CAC;
+@define-color background #00000C;
+@define-color foreground #F4F0F6;
+@define-color color0  #00000C;
+@define-color color1  #374067;
+@define-color color2  #844862;
+@define-color color3  #BD7D8E;
+@define-color color4  #878DBD;
+@define-color color5  #A8CCDD;
+@define-color color6  #E0D4E6;
+@define-color color7  #E7E1EA;
+@define-color color8  #A29EA4;
+@define-color color9  #374067;
+@define-color color10 #844862;
+@define-color color11 #BD7D8E;
+@define-color color12 #878DBD;
+@define-color color13 #A8CCDD;
+@define-color color14 #E0D4E6;
+@define-color color15 #E7E1EA;
